--- a/src/resources/views/partials/slider.hbs
+++ b/src/resources/views/partials/slider.hbs
@@ -8,13 +8,13 @@
         </div>
         <div class='swiper-slide'>
             <img
-                src='https://i.imgur.com/RyxC4Yn.jpg'
+                src='https://hocvientaichinh.com.vn/wp-content/uploads/2018/04/truong-xet-hoc-ba.jpg'
                 alt=''
             />
         </div>
-         <div class='swiper-slide'>
+        <div class='swiper-slide'>
             <img
-                src='https://i.imgur.com/oOS3RDm.jpg'
+                src='https://ap.cdnki.com/dai-hoc-cong-lap-nao-diem-chuan-thap-nhat-nam-2022---d6419ba95e6cce3ca5a278d3993f7588.wepb'
                 alt=''
             />
         </div>
@@ -45,8 +45,12 @@
     centeredSlides: true,
     slidesPerView: 1,
     loop: true,
+    effect: 'fade',
+    fadeEffect: {
+        crossFade: true
+    },
     autoplay: {
-        delay: 3500,
+        delay: 4500,
         disableOnInteraction: false,
     },
     pagination: {
